--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -3,33 +3,27 @@
   <head>
     <title>Dashboard - Map</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script type="text/javascript" src="js/l10n.js"></script>
-    <script type="text/javascript" src="js/localizations.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
       <style type="text/css">
           html, body { height: 100%; margin: 0; padding: 0; }
-          #map { height: 100%; }
+          #map { height: 500px; width: 700px; }
       </style>
   </head>
     <body class="homepage">
 
         <div id="wrapper">
-<div class="container">
+    <div class="container">
         <div id="main">
-    <div id="header">
-      <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#">Force Bee w/ U</a>
-          </div>
+        <div id="header">
+          <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <a class="navbar-brand" href="#">Force Bee w/ U</a>
+              </div>
+            </div>
+          </nav>
         </div>
-      </nav>
-    </div>
 
-    <div id="map"></div>
+        <div id="map"></div>
     <script type="text/javascript">
 
       var map;
@@ -44,7 +38,7 @@
         $.get("http://fbwu.rob4001.co.uk/api/map",
                 function(data) {
                     data.forEach(function(element) {
-                      var myLatLng = {lat: element.LAT, lng: element.LNG};
+                      var myLatLng = new google.maps.LatLng(element.LAT, element.LNG);
                       if (element.OBJTYPE == "HiveView") {
                         var colour = "blue";
                         var href = "http://www.fbwu.rob4001.co.uk/hive.html?id=" + element.ID;
