--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -3,6 +3,13 @@
   <head>
     <title>Dashboard - Map</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+      <link rel="stylesheet" href="css/main.css">
+      <script type="text/javascript" src="js/l10n.js"></script>
+      <script type="text/javascript" src="js/localizations.js"></script>
+      <script type="text/javascript" src="js/bootstrap.min.js"></script>
       <style type="text/css">
           html, body { height: 100%; margin: 0; padding: 0; }
           #map { height: 500px; width: 700px; }
