--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -12,7 +12,9 @@
       <script type="text/javascript" src="js/bootstrap.min.js"></script>
       <style type="text/css">
           html, body { height: 100%; margin: 0; padding: 0; }
-          #map { height: 500px; width: 700px; }
+          #map { height: 90vh;
+              width: 90vw; }
+          .container { width: 100%; }
       </style>
   </head>
     <body class="homepage">
