--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -13,7 +13,7 @@
       <style type="text/css">
           html, body { height: 100%; margin: 0; padding: 0; }
           #map { height: 90vh;
-              width: 100vw; }
+              width: 95vw; }
           .container { width: 100%; }
       </style>
   </head>
@@ -27,6 +27,7 @@
             <div class="container-fluid">
               <div class="navbar-header">
                 <a class="navbar-brand" href="#">Force Bee w/ U</a>
+                  <div style="float: right; position: absolute;   right: 0;   padding: 15px;   font-size: 15px;"><a href="../map.html">Map</a></div>
               </div>
             </div>
           </nav>
