--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -64,6 +64,7 @@
                         url: "google.co.uk"
                       });
                       markers.push(marker);
+                        google.maps.event.addListener(marker, 'click', loadURL(marker));
                     });
                 }
 
